RESOLVED FIXED81619
[EFL] Fix build break because of PlatformString.h
https://bugs.webkit.org/show_bug.cgi?id=81619
Summary [EFL] Fix build break because of PlatformString.h
Gyuyoung Kim
Reported 2012-03-19 19:10:26 PDT
wtf/PlatformString.h was removed. So, IconEfl.cpp file can't find PlatformString.h. This patch fixes this build error.
Attachments
Patch (1.22 KB, patch)
2012-03-19 19:12 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2012-03-19 19:12:19 PDT
WebKit Review Bot
Comment 2 2012-03-19 21:39:51 PDT
Comment on attachment 132745 [details] Patch Clearing flags on attachment: 132745 Committed r111348: <http://trac.webkit.org/changeset/111348>
WebKit Review Bot
Comment 3 2012-03-19 21:39:56 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 4 2012-03-19 22:16:40 PDT
I'm sorry I broke your build. This fix is wrong however. < > is used for system headers. Headers which are sought for beyond the current directory. <text/PlatformString> is suggesting that somehow "text" is some separate module, which is not true. This header should just be "PlatformString.h", I'm sorry for wrongly changing it to <wtf/PlatformString.h> earlier. <wtf/text/WTFString.h> is basically equivalent to PlatformString.h and some day we'll remove PlatformString.h I think.
Gyuyoung Kim
Comment 5 2012-03-20 01:55:09 PDT
(In reply to comment #4) > I'm sorry I broke your build. This fix is wrong however. > > < > is used for system headers. Headers which are sought for beyond the current directory. > > <text/PlatformString> is suggesting that somehow "text" is some separate module, which is not true. > > This header should just be "PlatformString.h", I'm sorry for wrongly changing it to <wtf/PlatformString.h> earlier. <wtf/text/WTFString.h> is basically equivalent to PlatformString.h and some day we'll remove PlatformString.h I think. Ah, thank you for your fix again.
Note You need to log in before you can comment on or make changes to this bug.