[EFL] Fix build break because of PlatformString.h https://bugs.webkit.org/show_bug.cgi?id=81619

Unreviewed. Fix build break because of PlatformString.h.


* platform/graphics/efl/IconEfl.cpp: Include PlatformString.h from text directory.


git-svn-id: svn://svn.chromium.org/blink/trunk@111348 bbb929c8-8fbe-4397-9dbb-9b2b20218538