third_party/WebKit/Source/WebCore/platform/graphics/efl/IconEfl.cpp
@@ -39,8 +39,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "MIMETypeRegistry.h"
 #include "NotImplemented.h"
 
+#include <text/PlatformString.h>
 #include <wtf/PassRefPtr.h>
-#include <wtf/PlatformString.h>
 
 namespace WebCore {
 
